module/core/derive_tools/tests/inc/index_mut/compiletime/struct_named_empty.rs
use derive_tools::IndexMut;

#[ derive( IndexMut ) ] 
struct EmptyStruct 
{    
}

fn main()
{  
}
